Add user activity log

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="360 Analytics" />
     <link
-      href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
